[gd_scene load_steps=6 format=1]

[ext_resource path="res://GUI/theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/ready_dialog.gd" type="Script" id=2]
[ext_resource path="res://GUI/ok_normal.png" type="Texture" id=3]
[ext_resource path="res://GUI/ok_pressed.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource/name = "disappear"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="ready" type="Label"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 1 )
margin/left = 134.0
margin/top = 77.0
margin/right = -103.0
margin/bottom = 4.0
text = "Ready ?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 2 )

[node name="ok_button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 63.0
margin/top = 87.0
margin/right = 154.0
margin/bottom = 183.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/disappear = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="best_score_label" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.52 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -112.0
margin/right = 334.0
margin/bottom = -39.0
text = "Best score:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="best_score" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.52 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 174.0
margin/top = -112.0
margin/right = 508.0
margin/bottom = -39.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="help" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -48.0
margin/top = -43.0
margin/right = 567.0
margin/bottom = 30.0
text = "Jump with spacebar"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="ok_button" to="." method="_on_ok_button_pressed"]


